[package]
name = "vulkan_examples"
version = "0.1.0"
authors = ["Lin Wang <wanglinseven@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.35.1", default-features = true, features = ["linked"] }
ash-window = "0.9"
winit = "0.25.0"
cgmath = "0.18.0"
tobj = { version = "3", default-features = false }
